opencloud/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: opencloud
  namespace: opencloud

  labels:
    app: opencloud

spec:
  replicas: 1

  selector:
    matchLabels:
      app: opencloud

  template:
    metadata:
      labels:
        app: opencloud

    spec:
      containers:
        - name: opencloud

          image: opencloudeu/opencloud-rolling:7.4.0
          imagePullPolicy: IfNotPresent

          command:
            - /bin/sh
            - -c

          args:
            - |
              opencloud init || true
              exec opencloud server

          ports:
            - name: http
              containerPort: 9200
              protocol: TCP

          volumeMounts:
            - name: opencloud-data
              mountPath: /etc/opencloud

            - name: opencloud-data
              mountPath: /var/lib/opencloud

      volumes:
        - name: opencloud-data
          persistentVolumeClaim:
            claimName: opencloud-data
