opencloud/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: opencloud
  namespace: opencloud

spec:
  selector:
    app: opencloud

  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: 9200
