opencloud/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: opencloud
  namespace: opencloud

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - cloud.morgan-coulm.fr
      secretName: cloud-tls

  rules:
    - host: cloud.morgan-coulm.fr

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: opencloud
                port:
                  number: 9200
